--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulação de Phishing</title>
+    <title>RIB-MG</title>
     <style>
         body {
-            background-color: #ff4c4c;
-            color: white;
+            background-color: #ffffff; /* Fundo branco */
+            color: #000000; /* Letras pretas */
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
@@ -15,9 +15,12 @@
         h1 {
             font-size: 2.5em;
         }
+        p {
+             margin-bottom: 30px;
+        }
         a {
-            background-color: white;
-            color: #ff4c4c;
+            background-color: #f0f0f0; /* Fundo do botão do link cinza claro */
+            color: #000000; /* Letras do botão pretas */
             padding: 15px 25px;
             text-decoration: none;
             font-weight: bold;
@@ -26,12 +29,13 @@
             margin-top: 20px;
         }
         a:hover {
-            background-color: #ffd6d6;
+            background-color: #e0e0e0; /* Cor do botão ao passar o mouse */
         }
     </style>
 </head>
 <body>
     <h1>VOCÊ CAIU EM UMA SIMULAÇÃO DE PHISHING</h1>
-    <p>Este é um teste de conscientização em segurança da informação.</p>
+    <p>Este é um teste de conscientização em segurança da informação</p>
+    <a href="fasciculo-phishing-golpes.pdf" target="_blank">Clique aqui para ver o fascículo sobre phishing e outros golpes</a>
 </body>
 </html>
