--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
         a:hover {
             background-color: #e0e0e0; /* Cor do botão ao passar o mouse */
         }
+        img {
+            max-width: 250px; /* Define um tamanho máximo para a logo */
+            margin-bottom: 20px; /* Adiciona um espaço abaixo da logo */
+        }
     </style>
 </head>
 <body>
+    <img src="RIB_MG AZUL.png" alt="Logo RIB-MG">
     <h1>VOCÊ CAIU EM UMA SIMULAÇÃO DE PHISHING</h1>
     <p>Este é um teste de conscientização em segurança da informação</p>
     <a href="fasciculo-phishing-golpes.pdf" target="_blank">Clique aqui para ver o fascículo sobre phishing e outros golpes</a>
